@@ -1934,3 +1934,12 @@ Fri Sep 17 11:29:07 PDT 1999
 Changes to the memory allocation stuff to make it more portable and
 such.  Account for all the different ways they could be called and
 do the rerouting ourselves so we don't depend on the OS.
+
+-------------------------------------------------------------------------------
+
+Fri Sep 17 12:45:36 PDT 1999
+(Mandrake)
+
+fixed the kde support causing segfault bug
+fixed the kde event duplication bugs.
+fixed "segfault everything on non-desk-0 bug"
